@@ -1,0 +1,23 @@
+/* XPM */
+static const char * const rotate0_xpm[] = {
+"16 16 3 1 0 0",
+"  c #6E6E70",
+"! c #4E4E50",
+"# c None",
+"################",
+"################",
+"#######  #######",
+"###### !! ######",
+"##### !!!! #####",
+"#### !!!!!! ####",
+"### !!!!!!!! ###",
+"####!# !! #!####",
+"###### !! ######",
+"###### !! ######",
+"###### !! ######",
+"###### !! ######",
+"###### !! ######",
+"###### !! ######",
+"#######  #######",
+"################"
+};
