@@ -1,0 +1,25 @@
+/* XPM */
+static const char * const rotate90ccw_xpm[] = {
+"16 16 5 1 0 0",
+"  c #4E4E50",
+"! c #4E4E51",
+"# c #4F4F50",
+"$ c #4F4F51",
+"% c None",
+"%%%%%%%%%%%%%%%%",
+"%%%%%%%%%%%%%%%%",
+"%%%%%%%%    %%%%",
+"%%%%%%        %%",
+"%%%%%     %%%%!%",
+"%%%%    %%%%%%%%",
+"%%%%   #%%%%%%%%",
+"%%%    %%%%%%%%%",
+"%%%    %%%%%%%%%",
+"%$%    %$%%%%%%%",
+"%$      $%%%%%%%",
+"%%      %%%%%%%%",
+"%%%    %%%%%%%%%",
+"%%%%$$%%%%%%%%%%",
+"%%%%%%%%%%%%%%%%",
+"%%%%%%%%%%%%%%%%"
+};
